--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!-- saved from url=(0053)https://amadeus4dev-smart-flightsearch.herokuapp.com/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <link rel="stylesheet" type="text/css" href="./Amadeus Flight Search_files/style.css">
-    <link rel="stylesheet" href="./Amadeus Flight Search_files/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css"  crossorigin="anonymous">
     
 
     <title>Amadeus Flight Search</title>
@@ -55,19 +55,11 @@
   </div>
 </div>
 
-<script src="./Amadeus Flight Search_files/popper.min.js.download" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="./Amadeus Flight Search_files/bootstrap.min.js.download" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-        $("#form_id").on("submit", function (e) {
-        e.preventDefault(); //stop submit event
-        var self = $(this);
-        var originGiven = $("#inputOrigin").val();
-        $("#inputOrigin").val(originGiven.slice(0,3));
-        var destinationGiven = $("#inputDestination").val();
-        $("#inputDestination").val(destinationGiven.slice(0,3));
-        $("#form_id").off("submit");
-        self.submit();
-    });
-    </script>
 
-<ul id="ui-id-1" tabindex="0" class="ui-menu ui-widget ui-widget-content ui-autocomplete ui-front" style="display: none;"></ul><div role="status" aria-live="assertive" aria-relevant="additions" class="ui-helper-hidden-accessible"></div><ul id="ui-id-2" tabindex="0" class="ui-menu ui-widget ui-widget-content ui-autocomplete ui-front" style="display: none;"></ul><div role="status" aria-live="assertive" aria-relevant="additions" class="ui-helper-hidden-accessible"></div></body></html>
+<ul id="ui-id-1" tabindex="0" class="ui-menu ui-widget ui-widget-content ui-autocomplete ui-front" style="display: none;"></ul>
+<div role="status" aria-live="assertive" aria-relevant="additions" class="ui-helper-hidden-accessible"></div>
+<ul id="ui-id-2" tabindex="0" class="ui-menu ui-widget ui-widget-content ui-autocomplete ui-front" style="display: none;"></ul>
+<div role="status" aria-live="assertive" aria-relevant="additions" class="ui-helper-hidden-accessible"></div>
+
+</body>
+</html>
